# NexChat

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
.claude/: RULES.md  (+2 more)
backend/auth/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/auth/app/core/: config.py  exception.py
backend/auth/app/core/auth/: exceptions.py  model.py  repository.py  schemas.py  security.py  service.py
backend/auth/app/infra/broker/: config.py  publisher.py
backend/auth/app/infra/database/: base.py  models.py  repositories.py
backend/auth/app/infra/redis/: _util.py  blacklist.py  rate_limiter.py
backend/auth/app/infra/web/: dependables.py  handler.py  responses.py  router.py
backend/auth/app/runner/: logging.py  main.py  setup.py
backend/auth/tests/: conftest.py
backend/auth/tests/api/: test_change_password.py  test_forgot_password.py  test_health.py  test_login.py  test_logout.py  test_me.py  test_refresh.py  test_register.py  test_resend_verification.py  test_reset_password.py  test_user_lookup.py  test_username.py  test_verify_email.py
backend/auth/tests/integration/: test_blacklist.py  test_rate_limiter.py  test_user_repository.py  test_verification_publisher.py
backend/auth/tests/unit/: test_security.py  test_service.py
backend/auth/tests/web/: test_dependables.py  test_exception_mapping.py  test_logging.py
backend/chat/: .env.example  Dockerfile  pyproject.toml
backend/chat/app/core/: config.py
backend/chat/app/core/chat/: exceptions.py  model.py  repository.py  schemas.py  security.py  service.py
backend/chat/app/infra/broker/: config.py  publisher.py
backend/chat/app/infra/database/: config.py  models.py  repositories.py
backend/chat/app/runner/: main.py  setup.py
backend/chat/tests/: conftest.py
backend/chat/tests/api/: test_conversations.py  test_health.py  test_messages.py
backend/chat/tests/integration/: test_connection_manager.py  test_conversation_repository.py  test_message_publisher.py  test_message_repository.py
backend/chat/tests/unit/: test_message_notification.py  test_service.py  test_token_validation.py
backend/chat/tests/web/: test_dependables.py  test_exception_mapping.py  test_logging.py
backend/chat/tests/ws/: test_disconnect.py  test_handshake.py  test_logging.py  test_messaging.py
(+142 files in other folders)
